# rust-proc-macro-without-dependencies

./: .gitignore  Cargo.toml  README.md
default_derive/: Cargo.toml
default_derive/src/: lib.rs
default_derive_tester/: Cargo.toml
default_derive_tester/src/: main.rs
